--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:  port: 8888
 spring:  cloud:    config:      server:
         encrypt:          enabled: false        git:
           uri: https://github.com/TalesC/microservice-config-repo
-          search-paths: fornecedor, loja
+          search-paths: fornecedor, loja, transportador
           
           
           
